# CesBinServer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
docker/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 0f696980e5ef_edit_period_s_name.py  2024_11_16_1657-af4a9aca3f87_init_paste_and_period.py  2024_11_16_1825-a73f2e8e3068_edit_paste_model.py  2024_11_16_2116-da51f2ef8399_create_format_table.py  2025_02_13_2300-0945640d5d2b_create_first_tables.py  2025_02_13_2303-3670b35ffd2c_create_formats_table.py  2025_02_13_2304-746749d19941_create_relationship_between_pastes_and_.py  518b8353f985_init_paste_table.py  8218e6ab4300_update_paste.py  834c634bd367_paste_path_in_paste_model.py  88c31e54cfed_update_paste_model.py  c519c8dd3bf7_edit_id.py
src/: main.py  providers.py
src/api/: __init__.py
src/api/format/: schemas.py  views.py
src/api/paste/: crud.py  dependency.py  schemas.py  views.py
src/api/period/: schemas.py  views.py
src/core/: config.py  db_helper.py
src/core/models/: __init__.py  base.py  format.py  paste.py  period.py
src/core/repositories/: __init__.py  base.py  format.py  paste.py  period.py
src/services/: __init__.py  files.py  paste.py
src/tasks/: celery.py  tasks.py
