[tool.poetry]
name = "cesbinserver"
version = "0.1.0"
description = ""
authors = ["MarkCesium <cesiummark01@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
