[tool.poetry]
name = "cesbinserver"
version = "0.1.0"
description = ""
authors = ["MarkCesium <cesiummark01@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.1"
alembic = "^1.13.1"
aiofile = "^3.8.8"
greenlet = "^3.1.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
