[tool.poetry]
name = "cesbinserver"
version = "0.1.0"
description = ""
authors = ["MarkCesium <cesiummark01@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.1"
alembic = "^1.13.1"
aiofile = "^3.8.8"
greenlet = "^3.1.1"
asyncpg = "^0.29.0"
celery = "^5.4.0"
uvicorn = "^0.32.1"
pyamqp = "^0.1.0.7"
psycopg = {extras = ["binary"], version = "^3.2.3"}
orjson = "^3.10.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
aiosqlite = "^0.20.0"

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
